--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 </head>
    
    
-    <h1> 𝐕𝐢𝐩𝐈𝐦𝐩𝐨𝐫𝐭'𝐒 </h1>
+    <h1> 𝐍𝐢𝐤𝐞 𝐒𝐁 𝐃𝐮𝐧𝐤 𝐋𝐨𝐰 𝐑𝐚𝐲𝐬𝐬𝐚 𝐋𝐞𝐚𝐥 </h1>
    
-    <p> 𝐸𝑥𝑝𝑙𝑜𝑟𝑒 𝑛𝑜𝑠𝑠𝑎 𝑐𝑜𝑙𝑒ç𝑎𝑜 𝑒𝑥𝑐𝑙𝑢𝑠𝑖𝑣𝑎 𝑑𝑒 𝑟𝑜𝑢𝑝𝑎𝑠 𝑒 𝑎𝑐𝑒𝑠𝑠𝑜𝑟𝑖𝑜𝑠 𝑑𝑒 𝑚𝑜𝑑𝑎, 𝑝𝑟𝑜𝑗𝑒𝑡𝑎𝑑𝑜𝑠 𝑝𝑎𝑟𝑎 𝑎𝑡𝑒𝑛𝑑𝑒𝑟 𝑎𝑠 𝑠𝑢𝑎𝑠 𝑛𝑒𝑐𝑒𝑠𝑠𝑖𝑑𝑎𝑑𝑒𝑠 𝑑𝑒 𝑒𝑠𝑡𝑖𝑙𝑜 𝑒 𝑐𝑜𝑛𝑓𝑜𝑟𝑡𝑜. 𝒟𝑒𝑠𝑐𝑢𝑏𝑟𝑎 𝑝𝑒ç𝑎𝑠 𝑢𝑛𝑖𝑐𝑎𝑠 𝑞𝑢𝑒 𝑖𝑟𝑎𝑜 𝑐𝑜𝑚𝑝𝑙𝑒𝑚𝑒𝑛𝑡𝑎𝑟 𝑠𝑒𝑢 𝑔𝑢𝑎𝑟𝑑𝑎-𝑟𝑜𝑢𝑝𝑎. </p>
+    <p> 𝒜𝑝𝑟𝑒𝑠𝑒𝑛𝑡𝑎𝑛𝑑𝑜 𝑜𝑠 𝒩𝑖𝑘𝑒 𝒮𝐵 𝒟𝑢𝑛𝑘 𝐿𝑜𝑤 𝑅𝑎𝑦𝑠𝑠𝑎 𝐿𝑒𝑎𝑙, 𝑢𝑚𝑎 𝑐𝑜𝑙𝑎𝑏𝑜𝑟𝑎ç𝑎𝑜 𝑖𝑐𝑜𝑛𝑖𝑐𝑎 𝑒𝑛𝑡𝑟𝑒 𝑎 𝑠𝑘𝑎𝑡𝑖𝑠𝑡𝑎 𝑏𝑟𝑎𝑠𝑖𝑙𝑒𝑖𝑟𝑎 𝑅𝑎𝑦𝑠𝑠𝑎 𝐿𝑒𝑎𝑙 𝑒 𝑎 𝒩𝑖𝑘𝑒. 𝐸𝑠𝑡𝑒𝑠 𝑡𝑒𝑛𝑖𝑠 𝑎𝑝𝑟𝑒𝑠𝑒𝑛𝑡𝑎𝑚 𝑢𝑚 𝑑𝑒𝑠𝑖𝑔𝑛 𝑣𝑖𝑏𝑟𝑎𝑛𝑡𝑒 𝑒 𝑐𝑜𝑙𝑜𝑟𝑖𝑑𝑜, 𝑐𝑜𝑚 𝑖𝑙𝑢𝑠𝑡𝑟𝑎ç𝑜𝑒𝑠 𝑑𝑎 𝐹𝑎𝑑𝑖𝑛ℎ𝑎 𝑑𝑜 𝒮𝑘𝑎𝑡𝑒 𝑛𝑎 𝑙𝑎𝑡𝑒𝑟𝑎𝑙. </p>
 
+
+    
+    <p> 𝒞𝑜𝑚 𝑢𝑚 𝑎𝑐𝑎𝑏𝑎𝑚𝑒𝑛𝑡𝑜 𝑝𝑟𝑒𝑚𝑖𝑢𝑚 𝑒 𝑢𝑚 𝑎𝑗𝑢𝑠𝑡𝑒 𝑐𝑜𝑛𝑓𝑜𝑟𝑡𝑎𝑣𝑒𝑙, 𝑒𝑠𝑡𝑒𝑠 𝑡𝑒𝑛𝑖𝑠 𝑠𝑎𝑜 𝑝𝑒𝑟𝑓𝑒𝑖𝑡𝑜𝑠 𝑡𝑎𝑛𝑡𝑜 𝑝𝑎𝑟𝑎 𝑜 𝑠𝑘𝑎𝑡𝑒 𝑞𝑢𝑎𝑛𝑡𝑜 𝑝𝑎𝑟𝑎 𝑜 𝑑𝑖𝑎 𝑎 𝑑𝑖𝑎. 𝒮𝑢𝑎 𝑒𝑠𝑡𝑒𝑡𝑖𝑐𝑎 𝑢𝑛𝑖𝑐𝑎 𝑒 𝑠𝑢𝑎 𝑐𝑜𝑛𝑒𝑥𝑎𝑜 𝑐𝑜𝑚 𝑎 ℎ𝑖𝑠𝑡𝑜𝑟𝑖𝑎 𝑑𝑎 𝑅𝑎𝑦𝑠𝑠𝑎 𝐿𝑒𝑎𝑙 𝑜𝑠 𝑡𝑜𝑟𝑛𝑎𝑚 
+𝑝𝑒ç𝑎𝑠 𝑑𝑒𝑠𝑒𝑗𝑎𝑑𝑎𝑠 𝑝𝑜𝑟 𝑓𝑎𝑠 𝑑𝑒 𝑚𝑜𝑑𝑎 𝑒 𝑒𝑠𝑝𝑜𝑟𝑡𝑒.  <p>
+    
     <p> </p>
    
     <img src="https://github.com/Suemarx/vipimport-s/blob/main/imagem_2024-05-06_185941353.png?raw=true">
