--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <p> </p>
    
-    <img src="https://github.com/Suemarx/vipimport-s/blob/main/imagem_2024-05-06_185941353.png?raw=true">
+    <img src="https://raw.githubusercontent.com/Suemarx/parcerias/main/tenis-dunk-low-nike-rayssa-leal-02.webp">
    
    
       
