--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         𝘤𝘰𝘭𝘰𝘳𝘪𝘥𝘰 𝘦 𝘥𝘦𝘴𝘤𝘰𝘯𝘵𝘳𝘢𝘪𝘥𝘰 𝘪𝘯𝘴𝘱𝘪𝘳𝘢𝘥𝘰 𝘯𝘰𝘴 𝘥𝘦𝘭𝘪𝘤𝘪𝘰𝘴𝘰𝘴 𝘴𝘢𝘣𝘰𝘳𝘦𝘴 𝘥𝘢 𝘮𝘢𝘳𝘤𝘢. </p>
 
 
-     <img src="https://raw.githubusercontent.com/Suemarx/parcerias/main/tenis-dunk-low-nike-rayssa-leal-02.webp">
+     <img src="https://github.com/Suemarx/parcerias/blob/main/cc9c78_246c2c77c5004a23b782964581ab780f~mv2%20(1).png?raw=true">
    
    
       
