--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         𝑒𝑚 𝑢𝑚 𝑠𝑜 𝑝𝑟𝑜𝑑𝑢𝑡𝑜. </p>
 
    
-    <img src="https://github.com/Suemarx/parcerias/blob/main/cc9c78_246c2c77c5004a23b782964581ab780f~mv2%20(1).png?raw=true">
+    <img src="https://github.com/Suemarx/parcerias/blob/main/new-olive-travis-scott-x-air-jordan-1-low-on-the--5-577-1710167502-0_16x9.jpg?raw=true">
    
    
       
