--- a/404.html
+++ b/404.html
@@ -31,8 +31,23 @@
     <p> 𝘌𝘴𝘵𝘦 𝘵𝘦𝘯𝘪𝘴 𝘕𝘪𝘬𝘦 𝘋𝘶𝘯𝘬 𝘚𝘉 𝘦𝘮 𝘤𝘰𝘭𝘢𝘣𝘰𝘳𝘢ç𝘢𝘰 𝘤𝘰𝘮 𝘢 𝘮𝘢𝘳𝘤𝘢 𝘥𝘦 𝘴𝘰𝘳𝘷𝘦𝘵𝘦𝘴 𝘉𝘦𝘯 & 𝘑𝘦𝘳𝘳𝘺'𝘴 𝘦 𝘶𝘮 𝘷𝘦𝘳𝘥𝘢𝘥𝘦𝘪𝘳𝘰 𝘥𝘦𝘴𝘵𝘢𝘲𝘶𝘦, 𝘤𝘰𝘮 𝘶𝘮 𝘥𝘦𝘴𝘪𝘨𝘯 
         𝘤𝘰𝘭𝘰𝘳𝘪𝘥𝘰 𝘦 𝘥𝘦𝘴𝘤𝘰𝘯𝘵𝘳𝘢𝘪𝘥𝘰 𝘪𝘯𝘴𝘱𝘪𝘳𝘢𝘥𝘰 𝘯𝘰𝘴 𝘥𝘦𝘭𝘪𝘤𝘪𝘰𝘴𝘰𝘴 𝘴𝘢𝘣𝘰𝘳𝘦𝘴 𝘥𝘢 𝘮𝘢𝘳𝘤𝘢. </p>
 
+    <p> 𝙲𝚘𝚖 𝚊 𝚝𝚎𝚌𝚗𝚘𝚕𝚘𝚐𝚒𝚊 𝚎 𝚚𝚞𝚊𝚕𝚒𝚍𝚊𝚍𝚎 𝚌𝚊𝚛𝚊𝚌𝚝𝚎𝚛𝚒𝚜𝚝𝚒𝚌𝚊𝚜 𝚍𝚊 𝙽𝚒𝚔𝚎, 𝚎𝚜𝚝𝚎 𝚖𝚘𝚍𝚎𝚕𝚘 𝚂𝙱 𝚌𝚘𝚖𝚋𝚒𝚗𝚊 𝚎𝚜𝚝𝚒𝚕𝚘 𝚊𝚛𝚛𝚘𝚓𝚊𝚍𝚘 𝚌𝚘𝚖 𝚝𝚘𝚍𝚘 𝚘 𝚌𝚘𝚗𝚏𝚘𝚛𝚝𝚘
+    𝚎 𝚍𝚎𝚜𝚎𝚖𝚙𝚎𝚗𝚑𝚘 𝚍𝚘𝚜 𝚖𝚎𝚕𝚑𝚘𝚛𝚎𝚜 𝚝𝚎𝚗𝚒𝚜 𝚍𝚊 𝚖𝚊𝚛𝚌𝚊. </p>
+
 
      <img src="https://github.com/Suemarx/parcerias/blob/main/cc9c78_246c2c77c5004a23b782964581ab780f~mv2%20(1).png?raw=true">
+
+
+    <h1> ℕ𝕚𝕜𝕖 𝕋𝕣𝕒𝕧𝕚𝕤 𝕊𝕔𝕠𝕥𝕥 𝕏 𝔸𝕚𝕣 𝕁𝕠𝕣𝕕𝕒𝕟 1 𝕃𝕠𝕨 𝕆𝕝𝕚𝕧𝕖 </h1>
+
+    <p> 𝒪 𝒯𝑒𝑛𝑖𝑠 𝒩𝑖𝑘𝑒 𝒯𝑟𝑎𝑣𝑖𝑠 𝒮𝑐𝑜𝑡𝑡 𝒳 𝒜𝑖𝑟 𝒥𝑜𝑟𝑑𝑎𝑛 1 𝐿𝑜𝑤 𝒪𝑙𝑖𝑣𝑒 𝑒 𝑢𝑚𝑎 𝑐𝑜𝑙𝑎𝑏𝑜𝑟𝑎ç𝑎𝑜 𝑢𝑛𝑖𝑐𝑎 𝑞𝑢𝑒 𝑐𝑜𝑚𝑏𝑖𝑛𝑎 𝑜 𝑑𝑒𝑠𝑖𝑔𝑛 𝑖𝑐𝑜𝑛𝑖𝑐𝑜 𝑑𝑎 𝒜𝑖𝑟 𝒥𝑜𝑟𝑑𝑎𝑛 𝑐𝑜𝑚 𝑜 𝑒𝑠𝑡𝑖𝑙𝑜 𝑚𝑎𝑟𝑐𝑎𝑛𝑡𝑒
+        𝑑𝑒 𝒯𝑟𝑎𝑣𝑖𝑠 𝒮𝑐𝑜𝑡𝑡. 𝒮𝑒𝑗𝑎 𝑛𝑜𝑡𝑎𝑑𝑜 𝑒 𝑑𝑒𝑠𝑡𝑎𝑞𝑢𝑒-𝑠𝑒 𝑐𝑜𝑚 𝑒𝑠𝑠𝑒 𝑡𝑒𝑛𝑖𝑠 𝑒𝑥𝑐𝑙𝑢𝑠𝑖𝑣𝑜. </p>
+
+    <p> 𝒜𝑙𝑒𝑚 𝑑𝑜 𝑣𝑖𝑠𝑢𝑎𝑙 𝑖𝑛𝑐𝑟𝑖𝑣𝑒𝑙, 𝑒𝑠𝑠𝑒 𝑡𝑒𝑛𝑖𝑠 𝑜𝑓𝑒𝑟𝑒𝑐𝑒 𝑡𝑜𝑑𝑜 𝑜 𝑐𝑜𝑛𝑓𝑜𝑟𝑡𝑜 𝑒 𝑑𝑢𝑟𝑎𝑏𝑖𝑙𝑖𝑑𝑎𝑑𝑒 𝑞𝑢𝑒 𝑣𝑜𝑐𝑒 𝑒𝑠𝑝𝑒𝑟𝑎 𝑑𝑎 𝒩𝑖𝑘𝑒. 𝒫𝑒𝑟𝑓𝑒𝑖𝑡𝑜 𝑝𝑎𝑟𝑎 𝑞𝑢𝑒𝑚 𝑏𝑢𝑠𝑐𝑎 𝑒𝑠𝑡𝑖𝑙𝑜 𝑒 𝑞𝑢𝑎𝑙𝑖𝑑𝑎𝑑𝑒 
+        𝑒𝑚 𝑢𝑚 𝑠𝑜 𝑝𝑟𝑜𝑑𝑢𝑡𝑜. </p>
+
+   
+    <img src="https://github.com/Suemarx/parcerias/blob/main/new-olive-travis-scott-x-air-jordan-1-low-on-the--5-577-1710167502-0_16x9.jpg?raw=true">
    
    
       
